--- a/inventoryManagementDesktopApplication/addArticleWindow.xaml
+++ b/inventoryManagementDesktopApplication/addArticleWindow.xaml
@@ -5,8 +5,179 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:inventoryManagementDesktopApplication"
         mc:Ignorable="d"
-        Title="addArticleWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Add Article" Height="500" Width="800"
+        WindowStartupLocation="CenterScreen"
+        Background="Beige"
+        ResizeMode="NoResize">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="130"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="600"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock
+            Text="Add Article"
+            Grid.Row="0"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FontSize="40"
+            FontWeight="Bold" Margin="93,0,0,0">
+
+        </TextBlock>
+        <TextBlock
+            Text="brand:"
+            Grid.Row="1"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <TextBox
+            x:Name="brandInput"
+            Text=""
+            Height="26"
+            Width="200"
+            MaxLength="64"
+            Grid.Row="1"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="357,0,0,0">
+        </TextBox>
+
+        <TextBlock
+            Text="name:"
+            Grid.Row="2"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <TextBox
+            x:Name="nameInput"
+            Text=""
+            Height="26"
+            Width="200"
+            MaxLength="64"
+            Grid.Row="2"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="357,0,0,0">
+        </TextBox>
+
+        <TextBlock
+            Text="description:"
+            Grid.Row="3"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <TextBox
+            x:Name="descriptionInput"
+            Text=""
+            Height="26"
+            Width="400"
+            MaxLength="100"
+            Grid.Row="3"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="157,0,0,0">
+        </TextBox>
+
+        <TextBlock
+            Text="category:"
+            Grid.Row="4"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <ComboBox
+            x:Name="categoryInput"
+            Text=""
+            Height="26"
+            Width="150"
+            Grid.Row="4"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="407,0,0,0">
+            <ComboBoxItem>Monitor</ComboBoxItem>
+            <ComboBoxItem>Laptop</ComboBoxItem>
+            <ComboBoxItem>Docking station</ComboBoxItem>
+            <ComboBoxItem>All-in-One</ComboBoxItem>
+            <ComboBoxItem>Mini PC</ComboBoxItem>
+        </ComboBox>
+
+        <TextBlock
+            Text="quantity:"
+            Grid.Row="5"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <TextBox
+            x:Name="quantityInput"
+            Text=""
+            Height="26"
+            Width="50"
+            Grid.Row="5"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="507,0,0,0">
+        </TextBox>
+
+        <TextBlock
+            Text="price:"
+            Grid.Row="6"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="25"
+            FontWeight="Bold">
+        </TextBlock>
+        <TextBox
+            x:Name="priceInput"
+            Text=""
+            Height="26"
+            Width="100"
+            Grid.Row="6"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Background="White" Margin="457,0,0,0">
+        </TextBox>
+
+        <Button
+            x:Name="applyBtn"
+            Content="Apply"
+            Grid.Row="7"
+            Grid.Column="1"
+            Margin="222,31,222,65"
+            Click="applyBtn_Click">
+        </Button>
+        <Button
+            x:Name="cancelBtn"
+            Content="Cancel"
+            Grid.Row="7"
+            Grid.Column="1"
+            Margin="401,30,43,65"
+            Click="cancelBtn_Click">
+        </Button>
     </Grid>
 </Window>
