--- a/inventoryManagementDesktopApplication/MainWindow.xaml
+++ b/inventoryManagementDesktopApplication/MainWindow.xaml
@@ -8,35 +8,106 @@
         Title="MainWindow" Height="450" Width="800"
         Background="Beige">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="300"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400"></ColumnDefinition>
+            <ColumnDefinition Width="400"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <Button
             x:Name="addArticleBtn"
             Content="New Article"
             Click="Btn_Click"
             Margin="677,378,29,25"/>
 
+        <TextBlock
+            Text="Login"
+            Grid.Row="0"
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FontSize="40"
+            FontWeight="Bold" Margin="347,10,0,0" Grid.ColumnSpan="2">
+        </TextBlock>
+
+        <TextBlock
+            Text="Username:"
+            Grid.Row="0"
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FontSize="30"
+            FontWeight="Bold" Margin="200,110,0,0">
+        </TextBlock>
+        <TextBox
+            x:Name="usernameInput"
+            Grid.Row="0"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FlowDirection="RightToLeft"
+            Margin="42,116,0,0"
+            Height="34"
+            Width="235">
+        </TextBox>
+        <TextBlock
+            Text="Password:"
+            Grid.Row="0"
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FontSize="30"
+            FontWeight="Bold" Margin="208,170,0,0">
+        </TextBlock>
+        <PasswordBox
+            x:Name="passwordInput"
+            Grid.Row="0"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            FlowDirection="RightToLeft"
+            Margin="42,176,0,0"
+            Height="34"
+            Width="235">
+        </PasswordBox>
+
         <Button
             x:Name="connectBtn"
             Content="Connect"
+            Grid.Row="1"
+            Grid.Column="1"
             Click="btnConn_Click"
-            Margin="580,10,140,334"/>
+            Margin="0,0,264,74"/>
 
         <Button
             x:Name="disconnectBtn"
             Content="Disconnect"
+            Grid.Row="1"
+            Grid.Column="1"
             Click="btnDisconn_Click"
-            Margin="677,10,43,334"/>
+            Margin="178,0,123,74"/>
 
         <TextBlock
             x:Name="lblConnected"
             Text="Connected"
-            FontSize="30"
+            Grid.Row="1"
+            Grid.Column="1"
+            FontSize="15"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
             Foreground="Green"
-            Margin="351,47,297,267"/>
+            Margin="32,34,0,0"/>
         <TextBlock
             x:Name="lblNotConnected"
             Text="No Connection"
-            FontSize="30"
+            Grid.Row="1"
+            Grid.Column="1"
+            FontSize="15"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
             Foreground="Red"
-            Margin="59,55,537,251"/>
+            Margin="18,34,0,0"/>
     </Grid>
 </Window>
