--- a/inventoryManagementDesktopApplication/inventoryWindow.xaml
+++ b/inventoryManagementDesktopApplication/inventoryWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="inventoryManagementDesktopApplication.inventoryWindow"
+﻿<!-- language: xaml -->
+    <Window x:Class="inventoryManagementDesktopApplication.inventoryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
