--- a/inventoryManagementDesktopApplication/inventoryWindow.xaml
+++ b/inventoryManagementDesktopApplication/inventoryWindow.xaml
@@ -1,5 +1,4 @@
-﻿<!-- language: xaml -->
-    <Window x:Class="inventoryManagementDesktopApplication.inventoryWindow"
+﻿<Window x:Class="inventoryManagementDesktopApplication.inventoryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -56,6 +55,7 @@
         <Border Grid.Row="5" BorderBrush="Gray" BorderThickness="1" Margin="10">
             <DataGrid
                 x:Name="dataTable"
+                AutoGenerateColumns="True"
                 Grid.Row="5">
             </DataGrid>
         </Border>
